PUT DEL 常用体检人
